# mpris-hyprland

./: .gitignore  LICENSE  PKGBUILD  README.md  install.sh
extension/: background.js  content-main.js  content.js  inject.js  manifest.chromium.json  manifest.json
host/: Cargo.toml
host/src/: main.rs  messaging.rs  mpris_player.rs  mpris_root.rs  protocol.rs  state.rs
packaging/: chromium-host.json.in  firefox-mpris-host.json.in
packaging/policies/: firefox.json  zen.json
scripts/: pack-crx.sh  sign.sh
