[package]
name = "mpris-hyprland-host"
version = "0.2.0"
edition = "2021"
description = "Native messaging host that bridges Firefox MediaSession API to MPRIS D-Bus"
license = "MIT"
repository = "https://github.com/MainstreamOS/mpris-hyprland"

[[bin]]
name = "mpris-hyprland-host"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
