[package]
name = "mpris-hyprland-host"
version = "0.2.1"
edition = "2021"
description = "Native messaging host that bridges Firefox MediaSession API to MPRIS D-Bus"
license = "MIT"
repository = "https://github.com/MainstreamOS/mpris-hyprland"

[[bin]]
name = "mpris-hyprland-host"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util", "sync"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
